Fix color contrast accesibility on flex-idx-search-filter.scss

--- a/scss/core/helpers/resources/flex-idx-search-filter.scss
+++ b/scss/core/helpers/resources/flex-idx-search-filter.scss
@@ -2006,6 +2006,7 @@ $colorp: #333333;
 						height: 100%;
 
 						span {
+							color: #fff;
 							position: absolute;
 							top: -500px;
 							left: 0;
